--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,9 @@
-icewm -- authors file.  2025-04-21
+icewm -- authors file.  2025-05-25
 
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Author: Саша Петровић <salepetronije@gmail.com>
+Author: Feike Donia <feikedonia@proton.me>
+Author: David Medina <medipas@gmail.com>
 Author: Gemineo <vistatec@gemineo.de>
 Author: Fran Serrador <serrador@proton.me>
 Author: Sophie Leroy <sophie@stoquart.com>
@@ -19,7 +22,6 @@ Author: Aleš Kastner <alkas@volny.cz>
 Author: Yasuhiko Kamata <belphegor@belbel.or.jp>
 Author: Luna  Jernberg <bittin@opensuse.org>
 Author: Ferdinand Galko <galko.ferdinand@gmail.com>
-Author: David Medina <medipas@gmail.com>
 Author: Hugo Carvalho <hugokarvalho@hotmail.com>
 Author: Code7R <Code7R@users.noreply.github.com>
 Author: Virinas code <alexcode228@gmail.com>
